--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Ant
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-ant
 
-name: Java CI
+name: Java Testing
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  JavaBuild:
 
     runs-on: ubuntu-latest
 
