--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -22,4 +22,4 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - name: Build with Ant
-      run: javac HelloWorld.java
+      run: javac Game.java
